--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ ModelsPath.Customer = com.example.miniapp.models.Customer
 ModelsPath.Payment = com.example.miniapp.models.Payment
 ModelsPath.Rating = com.example.miniapp.models.Rating
 ModelsPath.Trip = com.example.miniapp.models.Trip
+
+# PostgreSQL
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+
+# MongoDB
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
