adding docker-compose file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.application.name=acl-project2
 
+ModelsPath.Captain = com.example.demo.models.Captain 
+ModelsPath.Customer = com.example.demo.models.Customer
+ModelsPath.Payment = com.example.demo.models.Payment
+ModelsPath.Rating = com.example.demo.models.Rating
+ModelsPath.Trip = com.example.demo.models.Trip
 
-# Class Paths for testing
-# Please change the below paths to the paths of your models (the package name as it will be used in reflection code in the test cases)
-ModelsPath.Captain = com.example.miniapp.models.Captain 
-ModelsPath.Customer = com.example.miniapp.models.Customer
-ModelsPath.Payment = com.example.miniapp.models.Payment
-ModelsPath.Rating = com.example.miniapp.models.Rating
-ModelsPath.Trip = com.example.miniapp.models.Trip
+spring.data.mongodb.uri=mongodb://localhost:27017/olayan
+spring.data.mongodb.auto-index-creation=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/olayan
+spring.datasource.username=olayan
+spring.datasource.password=olayan
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
